채팅기능 추가

--- a/day.3.html
+++ b/day.3.html
@@ -16,8 +16,10 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=zh8ZvE-JjsZqY9FX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </p>
 <ol>
-   <li>동영상 삽입</li>
+    <li>동영상 삽입</li>
     ➡️ 유튜브에는 공유기능이 있다. 공유기능에 < > 퍼가기를 활용해 코드를 복사할 수 있다.
+    <li>댓글 기능 추가</li>
+    ➡️ DISQUS라는 사이트를 이용
 </ol>
 </body>
 </html>
